8329109: Threads::print_on() tries to print CPU time for terminated GC threads

Reviewed-by: rrich
Backport-of: c1cfb43d8de8d0eed01b9bb6aa1202dc7cbff007